test/integration/bad/closures/no_keyword1.stan
model {
    real foo(real x) {
        return x;
    }
}